- Fixed a bug that displayed secret rooms on the In-game map before the player enter them when the "Reveal Unexplored Rooms" attribute of the In-Game map Controller was set to true
- Fixed a bug that allowed Bombs to be used in liquids
- Fixed a bug that could prevent Heat Controllers with an empty Inactive Flag to work correctly
- Fixed a bug that allowed the player to fall trough jumpthru platforms while using the drone after transitionning to another room than the room the drone was spawned in.
- Fixed a crash when using the retry option in the pause menu while holding the drone
- Fixed a crash when closing the Binoculars from the Binoculars ability at the same time the player died

Version 1.0.63 :
- Replaced Teleport To Chapter Trigger "To Chapter" attribute with "Destination Chapter". This new attribute accept a chapter map path instead of a chapter index, and can be used to teleport to any chapter, even ouside of the current campaign. Old Teleport To Chapter triggers are unaffected
- Updated Custom Torch, Elevator, Upgrade Collectable and Warp Station loenn plugin to display their sprite at the correct position in the latest Loenn version
- Reduced the number of light occluders used by Slopes in order to allow more Slopes in a room before the game cannot handle them
- Fixed a bug that allowed Magnetic Ceilings to trigger solids as if the player was on top of them when the ceiling was far bellow the solid
- Fixed two bugs that could prevent the player to use the bomb upgrade
- Fixed a crash happening when trying to browse the list of achievements of The Forgotten Abysses section in The Scret of Celeste Mountain

Version 1.0.62 :
- Added "Only Current Chapter" attribute to Warp Stations
- Improved collision of Actors entities with upside down Slopes
- Fixed a bug preventing upgrades to be removed in the B-Side of Secret of Celeste Mountain
- Fixed a crash that could happen when dying while using the drivable car from Pandora Box

Version 1.0.61 :