@@ -34,7 +34,8 @@ Version 1.0.64 :
 - Fixed a bug that displayed secret rooms on the In-game map before the player enter them when the "Reveal Unexplored Rooms" attribute of the In-Game map Controller was set to true
 - Fixed a bug that allowed Bombs to be used in liquids
 - Fixed a bug that could prevent Heat Controllers with an empty Inactive Flag to work correctly
-- Fixed a bug that allowed the player to fall trough jumpthru platforms while using the drone after transitionning to another room than the room the drone was spawned in.
+- Fixed a bug that allowed the player to fall trough jumpthru platforms while using the drone after transitionning to another room than the room the drone was spawned in
+- Fixed a bug that caused bombs hold by the player to become invisible after transitioning to another room
 - Fixed a crash when using the retry option in the pause menu while holding the drone
 - Fixed a crash when closing the Binoculars from the Binoculars ability at the same time the player died
 
